// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`IDCC return idcc for number 27 1`] = `
{
  "hits": [
    {
      "_id": "20",
      "_index": "cdtn_test-v2_documents",
      "_score": 7.067604,
      "_source": {
        "cdtnId": "ceb38cca3c",
        "contributions": false,
        "effectif": 219,
        "id": "KALICONT000023973390",
        "num": 2701,
        "shortTitle": "Banque : personnel des banques de la Guyane",
        "slug": "2701-banque-personnel-des-banques-de-la-guyane",
        "title": "Convention collective du travail du personnel des banques de la Guyane du 18 décembre 2007",
        "url": "https://www.legifrance.gouv.fr/affichIDCC.do?idConvention=KALICONT000023973390",
      },
      "_type": "_doc",
    },
  ],
  "max_score": 7.067604,
  "total": {
    "relation": "eq",
    "value": 1,
  },
}
`;

exports[`IDCC return idcc results for boulangerie 1`] = `
{
  "hits": [
    {
      "_id": "19",
      "_index": "cdtn_test-v2_documents",
      "_score": 14.462465,
      "_source": {
        "cdtnId": "647c224c9b",
        "contributions": true,
        "effectif": 134889,
        "id": "KALICONT000005635886",
        "num": 843,
        "shortTitle": "Boulangerie-pâtisserie (entreprises artisanales)",
        "slug": "843-boulangerie-patisserie-entreprises-artisanales",
        "title": "Convention collective nationale de la boulangerie-pâtisserie du 19 mars 1976.  Etendue par arrêté du 21 juin 1978 JONC 28 juillet 1978.",
        "url": "https://www.legifrance.gouv.fr/affichIDCC.do?idConvention=KALICONT000005635886",
      },
      "_type": "_doc",
    },
    {
      "_id": "18",
      "_index": "cdtn_test-v2_documents",
      "_score": 13.359104,
      "_source": {
        "cdtnId": "16752da066",
        "contributions": false,
        "effectif": 44699,
        "id": "KALICONT000005635691",
        "num": 1747,
        "shortTitle": "Activités industrielles de boulangerie et pâtisserie",
        "slug": "1747-activites-industrielles-de-boulangerie-et-patisserie",
        "title": "Convention collective nationale des activités industrielles de boulangerie et pâtisserie du 13 juillet 1993. Mise à jour par avenant n°10 du 11 octobre 2011.",
        "url": "https://www.legifrance.gouv.fr/affichIDCC.do?idConvention=KALICONT000005635691",
      },
      "_type": "_doc",
    },
  ],
  "max_score": 14.462465,
  "total": {
    "relation": "eq",
    "value": 2,
  },
}
`;

exports[`IDCC return idcc results for pati 1`] = `
{
  "hits": [
    {
      "_id": "19",
      "_index": "cdtn_test-v2_documents",
      "_score": 14.174585,
      "_source": {
        "cdtnId": "647c224c9b",
        "contributions": true,
        "effectif": 134889,
        "id": "KALICONT000005635886",
        "num": 843,
        "shortTitle": "Boulangerie-pâtisserie (entreprises artisanales)",
        "slug": "843-boulangerie-patisserie-entreprises-artisanales",
        "title": "Convention collective nationale de la boulangerie-pâtisserie du 19 mars 1976.  Etendue par arrêté du 21 juin 1978 JONC 28 juillet 1978.",
        "url": "https://www.legifrance.gouv.fr/affichIDCC.do?idConvention=KALICONT000005635886",
      },
      "_type": "_doc",
    },
    {
      "_id": "18",
      "_index": "cdtn_test-v2_documents",
      "_score": 13.071224,
      "_source": {
        "cdtnId": "16752da066",
        "contributions": false,
        "effectif": 44699,
        "id": "KALICONT000005635691",
        "num": 1747,
        "shortTitle": "Activités industrielles de boulangerie et pâtisserie",
        "slug": "1747-activites-industrielles-de-boulangerie-et-patisserie",
        "title": "Convention collective nationale des activités industrielles de boulangerie et pâtisserie du 13 juillet 1993. Mise à jour par avenant n°10 du 11 octobre 2011.",
        "url": "https://www.legifrance.gouv.fr/affichIDCC.do?idConvention=KALICONT000005635691",
      },
      "_type": "_doc",
    },
  ],
  "max_score": 14.174585,
  "total": {
    "relation": "eq",
    "value": 2,
  },
}
`;

exports[`IDCC return idcc results in correct order for banque 1`] = `
{
  "hits": [
    {
      "_id": "21",
      "_index": "cdtn_test-v2_documents",
      "_score": 15.29951,
      "_source": {
        "cdtnId": "a25dfc974f",
        "contributions": true,
        "effectif": 216431,
        "id": "KALICONT000005635780",
        "num": 2120,
        "shortTitle": "Banque",
        "slug": "2120-banque",
        "title": "Convention collective nationale de la banque du 10 janvier 2000.  Etendue par arrêté du 17 novembre 2004 JORF 11 décembre 2004.",
        "url": "https://www.legifrance.gouv.fr/affichIDCC.do?idConvention=KALICONT000005635780",
      },
      "_type": "_doc",
    },
    {
      "_id": "20",
      "_index": "cdtn_test-v2_documents",
      "_score": 9.0670185,
      "_source": {
        "cdtnId": "ceb38cca3c",
        "contributions": false,
        "effectif": 219,
        "id": "KALICONT000023973390",
        "num": 2701,
        "shortTitle": "Banque : personnel des banques de la Guyane",
        "slug": "2701-banque-personnel-des-banques-de-la-guyane",
        "title": "Convention collective du travail du personnel des banques de la Guyane du 18 décembre 2007",
        "url": "https://www.legifrance.gouv.fr/affichIDCC.do?idConvention=KALICONT000023973390",
      },
      "_type": "_doc",
    },
  ],
  "max_score": 15.29951,
  "total": {
    "relation": "eq",
    "value": 2,
  },
}
`;

exports[`IDCC should return nothing 1`] = `
{
  "_shards": {
    "failed": 0,
    "skipped": 0,
    "successful": 1,
    "total": 1,
  },
  "hits": {
    "hits": [],
    "max_score": null,
    "total": {
      "relation": "eq",
      "value": 0,
    },
  },
  "timed_out": false,
}
`;
